# django-cattrs-fields

./: README.md  pyproject.toml
.github/workflows/: release.yml
django_cattrs_fields/: __init__.py  v.py
django_cattrs_fields/converters/: __init__.py  bson.py  cbor2.py  json.py  msgpack.py  msgspec.py  orjson.py  pyyaml.py  register_hooks.py  tomlkit.py  ujson.py
django_cattrs_fields/fields/: __init__.py  files.py
django_cattrs_fields/hooks/: __init__.py  date_hooks.py  file_hooks.py  list_hooks.py  number_hooks.py
django_cattrs_fields/utils/: timezone.py
django_cattrs_fields/validators/: __init__.py
tests/: test_boolean_fields.py  test_character_fields.py  test_date_fields.py  test_empty.py  test_exceptions.py  test_file_fields.py  test_file_upload.py  test_list.py  test_model_structure.py  test_numeric_fields.py
tests/books/: models.py  views.py
tests/books/migrations/: 0002_human.py
tests/conf/: settings.py
